--- a/README.adoc
+++ b/README.adoc
@@ -79,7 +79,7 @@ La version en ligne est disponible ici : https://bit.ly/paranote.
 |   | Sprint 2 | Cahier de tests | https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/Sprint_2/cahier_test_v2.adoc[Cahier de tests] | Cahiers de tests
 |   | Sprint 2 | Documentation Utilisateur |  https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/Sprint_2/documentation_utilisateur_v2.adoc[Documentation Utilisateur] |  Installation et présentation du projet avec ses fonctionnalités
 |   | Sprint 2 | Documentation Technique | https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/Sprint_2/documentation_technique_v2.adoc[Documentation Technique] | Fonctionnement et fichiers clés du projet
-|   | Sprint 2 | Release de fin de Sprint 2 | [Release de fin de Sprint 2] | Release de fin de Sprint 2
+|   | Sprint 2 | Release de fin de Sprint 2 | https://github.com/Diego-PB/ParaCheck/releases/tag/V2[Release de fin de Sprint 2] | Release de fin de Sprint 2
 |===
 
 == Réunions : 
